--- a/src/app/views/user/register/register.component.html
+++ b/src/app/views/user/register/register.component.html
@@ -1,8 +1,20 @@
 
-<div *ngIf="passwordErrorFlag"
-     class="alert alert-danger">
+<!--<div *ngIf="passwordErrorFlag"-->
+     <!--class="alert alert-danger alert-dismissible" close="closeAlert($index)">-->
+  <!--{{passwordErrorMsg}}-->
+<!--</div>-->
+
+<div *ngIf="passwordMatchFlag"
+     class="alert alert-danger" close="closeAlert($index)">
+  {{passwordMatchMsg}}
+</div>
+
+
+<div *ngIf="passwordErrorFlag" class="alert alert-danger alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   {{passwordErrorMsg}}
 </div>
+
 
 <div class="container">
   <h1>Register</h1>
