--- a/src/app/views/website/website-new/website-new.component.html
+++ b/src/app/views/website/website-new/website-new.component.html
@@ -43,7 +43,13 @@
       <div class="form-group">
         <label for="website-name">Name</label>
         <input placeholder="Name" class="form-control" type="text" id="website-name" ngModel required name="name" #name="ngModel"/>
+        <div [hidden]="name.valid || name.pristine"
+             class="alert alert-danger">
+          Name is required
+        </div>
       </div>
+
+
 
       <div class="form-group">
         <label for="website-description">Description</label>
