test heruko on Facebook login

--- a/src/app/views/user/login/login.component.html
+++ b/src/app/views/user/login/login.component.html
@@ -25,7 +25,8 @@
     </span>
     <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
     <a class="btn btn-success btn-block" routerLink="/register" role="button">Register</a>
-    <a href="http://localhost:3100/facebook/login" class="btn btn-primary btn-block">
+    <!--<a href="http://localhost:3100/facebook/login" class="btn btn-primary btn-block">-->
+      <a href="https://hellokittyy.herokuapp.com/facebook/login" class="btn btn-primary btn-block">
       <span class="fa fa-facebook"></span>
       Facebook
     </a>
