--- a/src/app/views/user/register/register.component.html
+++ b/src/app/views/user/register/register.component.html
@@ -21,32 +21,44 @@
   <form (ngSubmit) = "register()" #f="ngForm">
     <div class="form-group">
       <label>Username</label>
-      <input   placeholder="username" type="text" class="form-control" ngModel required name="username" #username="ngModel"/>
+      <input placeholder="username" type="text" class="form-control"
+             ngModel required name="username" #username="ngModel"
+             autocorrect="off" autocapitalize="none"/>
     </div>
 
     <div class="form-group">
       <label>Password</label>
-      <input   placeholder="password" type="password" class="form-control" ngModel required name="password" #password="ngModel"/>
+      <input placeholder="password" type="password" class="form-control"
+             ngModel required name="password" #password="ngModel"
+             autocorrect="off" autocapitalize="none"/>
     </div>
 
     <div class="form-group">
       <label>Verify Password</label>
-      <input   placeholder="verifypassword" type="password" class="form-control" ngModel required name="verifyPassword" #verifyPassword="ngModel"/>
+      <input placeholder="verifypassword" type="password" class="form-control"
+             ngModel required name="verifyPassword" #verifyPassword="ngModel"
+             autocorrect="off" autocapitalize="none"/>
     </div>
 
     <div class="form-group">
       <label>First Name</label>
-      <input   placeholder="firstName" type="text" class="form-control" ngModel required name="firstName" #firstName="ngModel"/>
+      <input placeholder="firstName" type="text" class="form-control"
+             ngModel required name="firstName" #firstName="ngModel"
+             autocorrect="off" autocapitalize="none"/>
     </div>
 
     <div class="form-group">
       <label>Last Name</label>
-      <input   placeholder="lastName" type="text" class="form-control" ngModel required name="lastName" #lastName="ngModel"/>
+      <input placeholder="lastName" type="text" class="form-control"
+             ngModel required name="lastName" #lastName="ngModel"
+             autocorrect="off" autocapitalize="none"/>
     </div>
 
     <div class="form-group">
       <label>Email</label>
-      <input   placeholder="email" type="text" class="form-control" ngModel required name="email" #email="ngModel"/>
+      <input placeholder="email" type="text" class="form-control"
+             ngModel required name="email" #email="ngModel"
+             autocorrect="off" autocapitalize="none"/>
     </div>
 
     <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Register</button>
