--- a/src/app/views/user/register/register.component.html
+++ b/src/app/views/user/register/register.component.html
@@ -11,7 +11,7 @@
 
 
 <div *ngIf="passwordErrorFlag" class="alert alert-danger alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
   {{passwordErrorMsg}}
 </div>
 
