updated assignment for grading

--- a/src/app/views/user/login/login.component.html
+++ b/src/app/views/user/login/login.component.html
@@ -32,7 +32,7 @@
 
     <button class="btn-3d purple" (click)="login()" type="submit" [disabled]="!f.valid">Login</button>
     <a class="btn-3d purple" routerLink="/register" role="button">Register</a>
-    <a href="http://localhost:3100/auth/facebook/login" class="btn-3d purple">
+    <a href="https://hellokittyy.herokuapp.com/facebook/login" class="btn-3d purple">
       <span class="fa fa-facebook"></span>
       Facebook
     </a>
