--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,60 +1,5 @@
 
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<link href='hts://fonts.googleapis.com/css?family=Dancingtp Script' rel='stylesheet'>-->
-<!--<style>-->
-  <!--header {-->
-    <!--font-family: 'Dancing Script';font-size: 50px;-->
-  <!--}-->
-<!--</style>-->
-<!--<header class="page-header" align="center" >Lady Yang-->
-<!--</header>-->
-
-
-
-
-<!--</html>-->
-
-<!--&lt;!&ndash;<div class="dropdown">&ndash;&gt;-->
-  <!--&lt;!&ndash;<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example&ndash;&gt;-->
-    <!--&lt;!&ndash;<span class="caret"></span></button>&ndash;&gt;-->
-  <!--&lt;!&ndash;<ul class="dropdown-menu">&ndash;&gt;-->
-    <!--&lt;!&ndash;<li><a href="#">HTML</a></li>&ndash;&gt;-->
-    <!--&lt;!&ndash;<li><a href="#">CSS</a></li>&ndash;&gt;-->
-    <!--&lt;!&ndash;<li><a href="#">JavaScript</a></li>&ndash;&gt;-->
-  <!--&lt;!&ndash;</ul>&ndash;&gt;-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-<!--&lt;!&ndash;<a routerLink="/main-page">Main Page</a>&ndash;&gt;-->
-<!--&lt;!&ndash;<a routerLink="/register">Register</a>&ndash;&gt;-->
-<!--&lt;!&ndash;<a routerLink="/profile">Profile</a>&ndash;&gt;-->
-
-<!--<router-outlet></router-outlet>-->
-<!--<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">-->
-
-<nav class="navbar navbar-light bg-light">
-
-  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-  <style>
-  header {
-  font-family: 'Dancing Script';font-size: 50px;
-  }
-  </style>
-  <header class="page-header" align="center" >Lady Yang
-  </header>
-
-    <!--<a href="#default" class="logo">CompanyLogo</a>-->
-
-    <a class="btn-3d purple header-right " href="http://localhost:4200/">Home</a>
-
-    <a class="btn-3d purple dropdown-header header-right" type="button" id="menu1" data-toggle="dropdown">Contact
-      <span class="caret"></span></a>
-    <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="menu1">
-      <li role="presentation">Phone<a role="menuitem" tabindex="-1" href="#Phone">Phone</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#Email">Email</a></li>
-
-    </ul>
-    <a class="btn-3d purple header-right" href="#about">About</a>
-
-</nav>
-
+<a routerLink="/login">Login</a>
+<a routerLink="/register">Register</a>
+<a routerLink="/profile">Profile</a>
 <router-outlet></router-outlet>
